[project]
name = "dagster-university"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matsudan", email = "daaamatsun@gmail.com" }
]
dependencies = [
    "dagster>=1.7.8",
    "dagster-cloud>=1.7.8",
    "dagster-duckdb>=0.23.8",
    "geopandas>=0.14.4",
    "kaleido>=0.2.1",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "shapely>=2.0.4",
    "dagster-webserver>=1.7.8",
    "pytest>=8.2.1",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dagster_university"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dagster_university"]
